--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,3 @@
 baseurl = "https://bitbureauet.dk/"
 languageCode = "da-dk"
-title = "Internetpolitisk tænketank"
+title = "Bitbureauet - Internetpolitisk tænketank"
